--- a/assets/css/htmlCss.css
+++ b/assets/css/htmlCss.css
@@ -21,7 +21,7 @@ footer {
 
 .banner1 {
   /* por favor cambiar la ruta de la imagen de la página */
-  background-image: url(./img/html.jpg);
+  background-image: url(../img/html.jpg);
   height: 550px;
   background-repeat: no-repeat;
   background-size: cover;
@@ -35,7 +35,7 @@ footer {
 }
 .banner2 {
   /* por favor cambiar la ruta de la imagen de la página */
-  background-image: url(./img/html.jpg);
+  background-image: url(../img/html.jpg);
   height: 550px;
   background-repeat: no-repeat;
   background-size: cover;
