--- a/assets/css/htmlCss.css
+++ b/assets/css/htmlCss.css
@@ -8,7 +8,7 @@
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 .body2 {
-  background-color:#19356D  ;
+  background-color:#3377FF  ;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
