--- a/assets/css/inicio.css
+++ b/assets/css/inicio.css
@@ -52,3 +52,11 @@ p{
 .containeer2 h3{
     color: white;
 }
+
+.logo{
+    position: absolute;
+    left: 4%;
+    height: 60px;
+    top: 2%;
+
+}
