--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -11,7 +11,7 @@
   
   .banner {
     /* por favor cambiar la ruta de la imagen de la página */
-    background-image: url(../img/Git-rename-branch.jpg);
+    background-image: url(../img/git.gif);
     height: 600px;
     background-repeat: no-repeat;
     background-size: cover;
@@ -20,7 +20,7 @@
   }
   .banner h1 {
     text-align: right;
-    margin-right: 15%;
+    
     font-size: 80px;
     padding: 150px 50px;
   }
