--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 .body2 {
-  background-color: rgb(40, 38, 44);
+  background-color: #aee2ec;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 .bodyjs{
@@ -63,6 +63,84 @@ p {
   padding: 10px;
   margin: 10px;
 }
+
+
+/**/
+.bannerCuestionario{
+  /* por favor cambiar la ruta de la imagen de la página */
+  background-image: url(../img/cuestionario.gif);
+  height: 550px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  /* Color de la letra */
+  color: rgb(27, 19, 94);
+}
+
+.center{
+  text-align: center;
+}
+
+.imagen{
+  width: 37%;
+}
+.nav-link{
+  color: aliceblue;
+}
+
+ul{
+  background-color: black;
+
+}
+h5{
+  background-color: white;
+  color: black;
+}
+
+p{
+  color: black;
+  text-align: justify;
+  font-size: 20px;
+}
+
+@media screen and (max-width: 800px) {
+  .bannerScrum h1 {
+    text-align: right;
+    font-size: 50px;
+    padding: 150px 50px;
+  }
+}
+
+.card-padding{
+  padding-left: 3%;
+    padding-top: 3%;
+    padding-bottom: 3%;
+    padding-right: 4%;
+    border-left: antiquewhite 12px solid;
+    border-right: antiquewhite 12px solid;
+
+
+
+}
+
+.red{
+  color: red;
+}
+
+.borde-abajo{
+  border: none;
+   border-bottom: gray 1px dashed;
+}
+
+.logo {
+  position: absolute;
+  left: 4%;
+  height: 60px;
+  top: 2%;
+}
+
+
+/**/
+
 
 @media screen and (max-width: 800px) {
   .banner1 h1 {
