--- a/assets/css/formRepositorios.css
+++ b/assets/css/formRepositorios.css
@@ -4,7 +4,7 @@
   }
   /*Body de las páginas Boostrap*/
   .body1 {
-    background-color: #f04f33;
+    background-color: #aee2ec;
     font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   }
   .body2 {
@@ -77,6 +77,75 @@
     }
   }
   
+
+
+  /**/
+  .bannerCuestionario{
+    /* por favor cambiar la ruta de la imagen de la página */
+    background-image: url(../img/cuestionario.gif);
+    height: 550px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    /* Color de la letra */
+    color: rgb(27, 19, 94);
+  }
+  
+  .center{
+    text-align: center;
+  }
+  
+  .imagen{
+    width: 37%;
+  }
+  .nav-link{
+    color: aliceblue;
+  }
+  
+  ul{
+    background-color: black;
+  
+  }
+  h5{
+    background-color: white;
+    color: black;
+  }
+  
+  p{
+    color: black;
+    text-align: justify;
+    font-size: 20px;
+  }
+  .card-padding{
+    padding-left: 3%;
+      padding-top: 3%;
+      padding-bottom: 3%;
+      padding-right: 4%;
+      border-left: antiquewhite 12px solid;
+      border-right: antiquewhite 12px solid;
+  }
+  
+  .red{
+    color: red;
+  }
+  
+  .borde-abajo{
+    border: none;
+     border-bottom: gray 1px dashed;
+  }
+  
+  .logo {
+    position: absolute;
+    left: 4%;
+    height: 60px;
+    top: 2%;
+  }
+  
+  
+  
+
+
+  /**/
+
   /* Navigation */
   .navbar {
     position: relative;
