--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@
 }
 /*Body de las páginas Boostrap*/
 .body1 {
-  background-color: rgb(66, 21, 126);
+  background-color: #aee2ec;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 .body2 {
