--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -24,6 +24,35 @@
     font-size: 80px;
     padding: 150px 50px;
   }
+
+  
+  
+  .nav-link{
+    color: aliceblue;
+  }
+  
+  ul{
+    background-color: black;
+  
+  }
+  h5{
+    background-color: white;
+    color: black;
+  }
+  
+  p{
+    color: black;
+    text-align: justify;
+    font-size: 20px;
+  }
+  
+  .logo {
+    position: absolute;
+    left: 4%;
+    height: 60px;
+    top: 2%;
+  }
+  
   
   
   
