--- a/assets/css/info.css
+++ b/assets/css/info.css
@@ -6,7 +6,7 @@ h1{
 }
 
 body{
-    background-color: #C7CEEA;
+    background-color: ghostwhite;
     text-align: center;
 }
 
@@ -123,3 +123,43 @@ p{
 .items{
     align-items: center;
 }
+
+
+.banner{
+    /* por favor cambiar la ruta de la imagen de la página */
+    background-image: url(../img/team.gif);
+    height: 550px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    /* Color de la letra */
+    color: rgb(27, 19, 94);
+  }
+  .banner h1 {
+    text-align: right;
+    font-size: 80px;
+    padding: 150px 84px;
+  }
+  .center{
+    text-align: center;
+  }
+  
+  .imagen{
+    width: 37%;
+  }
+
+  .containeer2{
+    padding-right: 29%;
+    padding-left: 29%;
+    margin-left: 3%;
+    margin-right: 3%;
+    border: solid blanchedalmond 4px;
+    border-radius: 23px;
+
+  }
+  .black{
+      color: black;
+  }
+  .card-padding{
+    border-top: antiquewhite 8px solid;
+    border-left: antiquewhite 8px solid;
+  }
