--- a/assets/css/scrum.css
+++ b/assets/css/scrum.css
@@ -63,6 +63,42 @@ p{
 }
 
 
+.bannerinicio{
+  /* por favor cambiar la ruta de la imagen de la página */
+  background-image: url(../img/principal2.gif);
+  height: 792px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  /* Color de la letra */
+  color: rgb(27, 19, 94);
+}
+.bannerinicio h1 {
+  text-align: right;
+  font-size: 80px;
+  padding: 150px 84px;
+}
+.center{
+  text-align: center;
+}
+
+.imagen{
+  width: 37%;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /**/
 
 
