--- a/assets/css/principal.css
+++ b/assets/css/principal.css
@@ -6,7 +6,7 @@
   body {
     /* por favor cambiar el color a su gusto */
     background-color: white;
-    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+    font-family: Helvetica,sans-serif;
   }
 
 .bannerinicio{
@@ -47,4 +47,20 @@
     left: 67%;
      box-shadow: 2px 2px 5px #999;
  }
+ .center{
+     text-align: center;
+     padding-bottom: 3%;
+ }
+ 
+ .inline{
+     display:inline-flex;
+     align-items: center;
+
+ }
+ .footer {
+    background-color: black;
+    color: white;
+    text-align: center;
+    padding: 10px;
+  }
  
