--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -5,7 +5,7 @@
   
   body {
     /* por favor cambiar el color a su gusto */
-    background-color: rgb(240, 79, 51);
+    background-color:#aee2ec;
     font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   }
   
@@ -25,7 +25,12 @@
     padding: 150px 50px;
   }
 
-  
+  .footer1 {
+    background-color: black;
+    color: white;
+    text-align: center;
+    padding: 10px;
+  }
   
   .nav-link{
     color: aliceblue;
