--- a/assets/css/juego.css
+++ b/assets/css/juego.css
@@ -321,7 +321,7 @@ ul {
   left: 37%;
   top: 10%;
 }
-.position button {
+.position-button {
   border: solid 2px cadetblue;
   border-radius: 32px;
 }
